@startuml

' style
skinparam Handwritten true
skinparam monochrome true

' associations
CustomList -- Node: head
CustomListIterator -- Node: current
Node -- Node: prev
Node -- Node: next

' class definitions
class CustomList <<Iterable>> {
  -head: Node
  -size: Int
  +find(element: Object)
  +add(element: Object)
  +remove()
  +pop(): Object
  +iterator(): CustomListIterator
}

class CustomListIterator <<Iterator>> {
  -current: Node
  +hasNext(): Object
  +next(): Object
}

class Node {
  -prev: Node
  -next: Node
  -element: Object
}

@enduml